fix: change padding on mobile on job page

--- a/css/job-details-style.css
+++ b/css/job-details-style.css
@@ -818,3 +818,9 @@ a.nav-link.new-link {
 .section-container {
 	padding-block: 4rem;
 }
+
+@media (max-width: 768px) {
+	.section-container {
+			padding-block: 2rem;
+	}
+}
